# Obsidian-Brain-OS

./: CHANGELOG.md  CHANGELOG_CN.md  INSTALL_FOR_AGENTS.md  LICENSE  README.md  README_CN.md  README_EN.md  setup.sh
cron-examples/: README.md  governance.json  nightly-pipeline.json  personal-ops.json
docs/: agent-bootstrap-guide.md  agent-workspace-cleanup-guide.md  agents.md  architecture.md  chronicle-agent.md  component-guide.md  faq.md  feature-matrix.md  friction-to-governance-loop.md  getting-started.md  governance-cron-guide.md  governance-sync-boundary.md  install-profiles.md  knowledge-architecture.md  nightly-knowledge-flywheel-ops.md  nightly-pipeline.md  notebooklm.md  obsidian-setup.md  openclaw-config-guide.md  openclaw-setup.md  personal-context-guide.md  personal-ops.md  project-management.md  qmd-setup.md  release-versioning.md  skills-guide.md
prompts/: article-integration.prompt.md  article-notes-integration.prompt.md  conversation-knowledge-flywheel.prompt.md  conversation-knowledge-mining.prompt.md  conversation-mining.prompt.md  friction-to-governance-loop.prompt.md  knowledge-flywheel-amplifier.prompt.md  knowledgebase-commit-patrol.prompt.md  personal-ops-monthly-milestones.prompt.md  personal-ops-morning-brief.prompt.md  personal-ops-v1-writer-instruction.md  personal-ops-weekly-plan.prompt.md
scripts/: brain-to-reminders.sh  (+8 more)
tools/conversation-mining/: export_all.py  pyproject.toml  viewer.html
tools/conversation-mining/conversation_mining/: cli.py  viewer.html
tools/conversation-mining/lib/: extract_codex.py  transcript_export.py
(+174 files in other folders)
